Feature/pacientes (#3)
* add patient

* fix patient

* add changes

* fix patient doc
